--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
  	width: 100%;
  	border-collapse: collapse;
 }
+.price-list th {
+	font-weight: normal;
+	text-align: left;
+}
 .price-list td {
 	border: 1px solid #333333;
+}
+.price-list th,
+.price-list td {
+	padding: 5px 10px;
 }
