--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-.page-header {
+.page-header,
+.page-footer {
   padding: 10px;
   background-color: #eeeeee;
 }
 .page-footer {
   margin-top: 20px;
+}
  .price-list {
  	width: 100%;
  	border-collapse: collapse;
@@ -18,4 +20,7 @@
 .price-list th,
 .price-list td {
 	padding: 5px 10px;
+}
+.price-list .price-number {
+	text-align: center;
 }
